cabal-version:       >=1.10
name:                porpoise
version:             0.1.0.0
license-file:        LICENSE
author:              Samuel Schlesinger
maintainer:          samuel@simspace.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Web.Porpoise
  build-depends:       base >=4.12 && <4.16,
                       wai >=3.2,
                       profunctors >=0.5,
                       mtl >=2.2,
                       unliftio >=0.2,
                       http-types >=0.12,
                       network >=3.1,
                       vault >=0.3
  default-language:    Haskell2010
